# concierge-worker

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  playwright.config.ts  worker-shim.mjs  wrangler.toml
.github/workflows/: deploy.yml  docs.yml  test.yml
assets/: browserconfig.xml  site.webmanifest
doc/: architecture.html  billing.html  book.toml  configuration.html  deploy.md  deployment.html  discord.html  docs.css  email-routing.html  embedding.html  facebook-app-setup.html  how-it-works.html  index.html  instagram.html  lead-forms.html  management.html  setup.html  setup.md  whatsapp.html
doc/src/: SUMMARY.md  architecture.md  billing.md  configuration.md  deployment.md  discord.md  email-routing.md  embedding.md  facebook-app-setup.md  how-it-works.md  index.md  instagram.md  lead-forms.md  management.md  whatsapp.md
doc/theme/: docs.css  index.hbs
docs/: book.toml  extract-docs.sh
docs/src/: README.md  SUMMARY.md  bookings.md  calendars.md  configuration.md  customization.md  deployment.md  digests.md  embedding-htmx.md  embedding-iframe.md  embedding.md  facebook-app-setup.md  forms.md  how-it-works.md  instagram.md  lead-forms.md  responders.md  setup.md  whatsapp.md
migrations/: 0001_create_schema.sql  0002_add_currency.sql
scripts/: test-server.mjs
src/: ai.rs  approval.rs  approvals.rs  crypto.rs  google_calendar.rs  google_forms.rs  helpers.rs  instagram.rs  landing.rs  legal.rs  lib.rs  locale.rs  personas.rs  pipeline.rs  responders.rs  scheduled.rs  sheets.rs  storage.rs  types.rs  whatsapp.rs
src/billing/: mod.rs  razorpay.rs  webhook.rs
src/channel/: discord.rs  email.rs  instagram.rs  mod.rs  whatsapp.rs
src/cloudflare/: dns.rs
src/discord/: api.rs  commands.rs  components.rs  events.rs  interactions.rs  mod.rs
tests/: auth-login.spec.ts  csp.spec.ts  layout.spec.ts  marketing.spec.ts  visual.spec.ts
(+62 files in other folders)
