[package]
name = "concierge-worker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
chrono = { version = "0.4", default-features = false, features = ["std", "wasmbind"] }
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Crypto", "SubtleCrypto", "CryptoKey"] }
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"

[profile.release]
opt-level = "s"
lto = true
