[package]
name = "concierge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1", "queue"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Crypto", "SubtleCrypto", "CryptoKey", "ReadableStream", "Response"] }
urlencoding = "2"
sha2 = "0.10"
hmac = "0.12"
mail-parser = "0.9"
base64 = "0.22"
subtle = "2.6"
futures = "0.3"
botrelay = { git = "https://github.com/ananthb/botrelay-rs", branch = "main" }

# Localization: icu4x for number/currency/date formatting; unic-langid for
# BCP-47 tag handling; accept-language for parsing the request header.
icu = { version = "1.5", features = ["compiled_data"] }
fixed_decimal = "0.5"
unic-langid = { version = "0.9", features = ["macros"] }
accept-language = "3"
fluent = "0.16"
fluent-syntax = "0.11"

[profile.release]
opt-level = "s"
lto = true
